Adaptación de las planillas de navbar con herencia

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,8 +1,5 @@
-<h1>Mi Web Personal</h1>
-<ul>
-    <li><a href="/">Inicio</a></li>
-    <li><a href="/acerca-de/">Acerca de</a></li>
-    <li><a href="/portafolio/">Portafolio</a></li>
-    <li><a href="/contacto/">Contacto</a></li>
-</ul>
+{% extends 'core/base.html' %}
+
+{% block content %}
 <h1>Inicio</h1>
+{% endblock %}
